Wed Mar 12 16:57:47 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Reliability/sub/Subscriber.cpp:

          Build failure when wide chars enabled.

Wed Mar 12 16:33:07 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Reliability/sub/Subscriber.cpp:

          Initialize pointer.

Wed Mar 12 16:01:43 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Reliability/Boilerplate.cpp:
        * tests/DCPS/Reliability/IDL/Reliability.idl:
        * tests/DCPS/Reliability/pub/Publisher.cpp:
        * tests/DCPS/Reliability/run_test.pl:
        * tests/DCPS/Reliability/shmem.ini:
        * tests/DCPS/Reliability/sub/DataReaderListenerImpl.h:
        * tests/DCPS/Reliability/sub/DataReaderListenerImpl.cpp:
        * tests/DCPS/Reliability/sub/SeqReaderListenerImpl.cpp:
        * tests/DCPS/Reliability/sub/Subscriber.cpp:
        * tests/DCPS/Reliability/sub/TakeNextReaderListenerImpl.cpp:
        * tests/DCPS/Reliability/sub/ZeroCopyReaderListenerImpl.cpp:

          Fuzz changes.

        * tests/DCPS/Reliability/pub/Publisher.mpc:
        * tests/DCPS/Reliability/sub/Subscriber.mpc:

          Change name of projects

Tue Mar 11 20:04:40 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * bin/dcps_tests.lst:
        * tests/DCPS/Reliability:
        * tests/DCPS/Reliability/Boilerplate.h:
        * tests/DCPS/Reliability/Boilerplate.cpp:
        * tests/DCPS/Reliability/IDL:
        * tests/DCPS/Reliability/IDL/Reliability.idl:
        * tests/DCPS/Reliability/IDL/Reliability.mpc:
        * tests/DCPS/Reliability/IDL/Reliability_Export.h:
        * tests/DCPS/Reliability/pub:
        * tests/DCPS/Reliability/pub/Publisher.mpc:
        * tests/DCPS/Reliability/pub/Publisher.cpp:
        * tests/DCPS/Reliability/run_test.pl:
        * tests/DCPS/Reliability/shmem.ini:
        * tests/DCPS/Reliability/sub:
        * tests/DCPS/Reliability/sub/DataReaderListenerImpl.h: